Fix build error
Errors from moving / renaming project folders to start Git repository. Hopefully all fixed now.

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>test</name>
+	<name>STM32-Encoder</name>
 	<comment></comment>
 	<projects>
 	</projects>
